Aggiunto spinner di caricamento

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       </div>
 
       <main>
+        <div v-if="loading" class="prova">
+          <i class="fas fa-circle-notch"></i>
+        </div>
 
         <!-- HOMEPAGE -->
         <h1 class="title"
